fix list style on mobile

--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -158,10 +158,12 @@ a.active {
 
 ul {
     list-style-type: none;
+    padding-left: 0;
 }
 
 .bullet-list {
     list-style-type: disc;
+    padding-left: 20px;
 }
 
 .narrow {
